-- Version 2.10.1, released ...

 * Bug fix: fix an error when opening Cave/Tunnel Layer settings that have a Plant layer as floor or roof layer that was saved with a different version

-- Version 2.10.0, released 13-5-2022

 * WorldPainter now has a merch store! Go to https://www.worldpainter.net/store/merch to support WorldPainter development
 * Custom Caves/Tunnel layer new functionality:
   + The Custom Caves/Tunnel layer now supports roof layers in addition to floor layers
   + Note that the roof layers are inverted. This includes Custom Objects, so you will have to make any objects you want to place on the roof upside-down (unless you _want_ them to be upside-down of course). A future version will make this inversion optional for Custom Object layers
   + The variation of Custom Caves/Tunnel floor and roof layers can now be configured, so that they are not applied with the same intensity everywhere but can vary randomly
   + The hanging plants have been added to the Custom Plants layer, for use as Cave/Tunnel roof layers. They will work non-inverted as well, but of course they will be upside-down
 * All known Minecraft 1.18 materials and material properties have been added the the custom material selector, so they can be more easily used in Custom Terrains, Custom Materials, etc...
 * Custom Layer palettes now have a "show" and "solo" checkbox for the entire palette, making it a little easier to show or hide entire categories of layers:
   + Unchecking "show" will hide all the layers from that palette from the editor view. It will be indicated by changing the palette icon to a red cross
   + Checking "solo" will only show the layers from that palette in the editor view. If will be indicated by changing the palette icon to a green checkmark. Soloing takes precedence over turning off "show". Only one palette can be soloed at a time
   + Just like with showing or soloing individual layers, all the layers will still be Exported